Solutions/workspace/CompactDiscDaoWithRestAndBoot/openshiftnew/cd-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\windows\system32\kompose.exe convert -f ../docker-compose.yaml
      --provider=openshift
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: cd
  name: cd
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: cd
status:
  loadBalancer: {}
